--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </h1>
         <nav>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar nome, número, email...">
+                <input type="text" placeholder="Nome, número, email...">
                 <i class="material-icons">search</i>
             </div>
         </nav>
