Color palette and design tweaks

--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
 
     <header>
         <h1>
-            Contatos
+            <i class="material-icons">contact_page</i>
         </h1>
         <nav>
+            
+            <h1>Contatos</h1>
             <div class="search-bar">
-                <input type="text" placeholder="Nome, número, email...">
                 <i class="material-icons">search</i>
+                <input type="text" placeholder="Buscar contato...">
             </div>
         </nav>
     </header>
+
+
     
 </body>
 </html>
