Header tweaks: - New design and navigation links - Including some icon styles

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
 <body>
 
     <header>
-        <h1>
-            <i class="material-icons">contact_page</i>
-        </h1>
         <nav>
+            <i class="material-icons icon">contact_page</i>
+            <a href="">Adicionar</a>
+            <a href="" class="active">Contatos</a>
+        </nav>
+        <div>
             
             <h1>Contatos</h1>
             <div class="search-bar">
                 <i class="material-icons">search</i>
                 <input type="text" placeholder="Buscar contato...">
             </div>
-        </nav>
+        </div>
     </header>
 
 
